fixed a lot of graphic bug on firefox

--- a/src/core.scss
+++ b/src/core.scss
@@ -10,12 +10,13 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
   padding: 0;
   vertical-align: top;
   box-sizing: border-box;
+  position: relative;
 }
 
 body {
   background-color: $light-grey;
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
 }
 
 #root, #root .body {
@@ -31,6 +32,8 @@ a {
   padding: 30px;
   display: flex;
   flex-direction: row;
+
+
 
   .views {
     flex: 1 1;
@@ -104,3 +107,4 @@ a {
 .lever {
   margin: 0 15px 0 0!important;
 }
+
