--- a/src/views/clusters/Clusters.scss
+++ b/src/views/clusters/Clusters.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1;
+    min-height: 0;
 
     .cluster-settings {
       display: block;
@@ -36,6 +37,7 @@
     .panel {
       display: flex;
       flex: 1 1;
+      min-height: 0;
 
       .left, .right {
         display: flex;
@@ -45,6 +47,7 @@
 
       .right {
         margin-left: 15px;
+        min-height: 0;
       }
 
       .brokers-summary {
@@ -64,6 +67,7 @@
       .brokers-settings {
         padding-right: 5px;
         width: 100%;
+        min-height: 0;
 
         .brokers-settings-containers {
           padding-right: 20px;
